# useful_static

./: Cargo.toml
src/: lib.rs
