[package]
name = "useful_static"
version = "0.1.1"
authors = ["WinLinux1028 <exsample@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A crate to use static like modern language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
